--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,800;1,200&display=swap');
 
 /* Common CSS */
 
 * {
     margin: 0;
     padding: 0;
-    font-family:  Arial, Verdana, sans-serif;
+    font-family: 'Montserrat', sans-serif;;
 }
 
 .container {
@@ -50,6 +50,11 @@ header > .container {
     color: #E5E7EB;
 }
 
+.list_header_nav a:hover{
+    color: #3882F6;
+}
+
+
 /* Hero Section */
 
 .section_hero {
@@ -85,6 +90,12 @@ header > .container {
     border-radius: 5px;
     font-weight: 800;
 }
+
+.section_hero_left a:hover {
+    color: #3882F6;
+    background-color: #fff;
+}
+
 
 /* Info section */
 
@@ -131,6 +142,7 @@ header > .container {
 .text_section_quote {
     font-size: 36px;
     font-style: italic;
+    font-weight: 200;
 }
 
 .text_section_quote_author {
@@ -176,6 +188,16 @@ header > .container {
     border-radius: 5px;
     font-weight: 800;
  }
+
+ .section_cta_right a:hover {
+    border: 2px solid white;
+    color: #3882F6;
+    background-color: white;
+    padding: 10px 30px;
+    border-radius: 5px;
+    font-weight: 800;
+ }
+
 
  /* Footer section  */
 
